--- a/briar-android/build.gradle
+++ b/briar-android/build.gradle
@@ -123,6 +123,7 @@ dependencies {
 		exclude group: 'com.android.support'
 		exclude module: 'disklrucache' // when there's no disk cache, we can't accidentally use it
 	}
+	implementation 'com.github.chrisbanes:PhotoView:2.1.4' // later versions already use androidx
 
 	annotationProcessor 'com.google.dagger:dagger-compiler:2.19'
 	annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
