--- a/briar-android/build.gradle
+++ b/briar-android/build.gradle
@@ -105,6 +105,7 @@ dependencies {
 	implementation "com.android.support:cardview-v7:$supportVersion"
 	implementation "com.android.support:support-annotations:$supportVersion"
 	implementation "com.android.support:exifinterface:$supportVersion"
+	implementation "com.android.support:palette-v7:$supportVersion"
 	implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 	implementation "android.arch.lifecycle:extensions:1.1.1"
 
