--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ test:
 
   script:
     - ./gradlew --no-daemon -Djava.security.egd=file:/dev/urandom animalSnifferMain animalSnifferTest
-    - ./gradlew --no-daemon -Djava.security.egd=file:/dev/urandom test
+    - ./gradlew --no-daemon -Djava.security.egd=file:/dev/urandom test --continue
 
   after_script:
     # these file change every time but should not be cached
